add tactical voidsuit

--- a/Resources/Prototypes/_Harmony/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/_Harmony/Catalog/uplink_catalog.yml
@@ -262,6 +262,25 @@
       tags:
         - NukeOpsUplink
 
+- type: listing
+  id: UplinkClothingOuterVoidsuitSyndie
+  name: uplink-syndie-voidsuit-name
+  description: uplink-syndie-voidsuit-desc
+  icon: { sprite: /Textures/_Harmony/Clothing/OuterClothing/Hardsuits/syndicate-voidsuit.rsi, state: icon }
+  productEntity: ClothingBackpackSyndicateVoidsuitBundle
+  discountCategory: rareDiscounts
+  discountDownTo:
+    Telecrystal: 5
+  cost:
+    Telecrystal: 6
+  categories:
+  - UplinkWearables
+  conditions:
+  - !type:StoreWhitelistCondition
+    blacklist:
+      tags:
+      - NukeOpsUplink
+
 # Pointless
 
 - type: listing
